--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.28.1"
+    "@playwright/test": "^1.28.1",
+    "@types/uuid": "^9.0.0"
   },
   "dependencies": {
     "uuid": "^9.0.0"
