--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {"headed": "npx playwright test --headed", "tests" : "npx playwright test"},
+  "scripts": {
+    "tests": "npx playwright test",
+    "headed": "npx playwright test --headed",
+    "debug": "npx playwright test --debug",
+    "help": "npx playwright test --help",
+    "chromium": "npx playwright test --project=chromium",
+    "egde": "npx playwright test --project=Microsoft Edge",
+    "webkit": "npx playwright test --project=webkit"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -12,6 +20,8 @@
     "@types/uuid": "^9.0.0"
   },
   "dependencies": {
+    "async-await-mutex-lock": "^1.0.10",
+    "mutex": "^1.0.2",
     "uuid": "^9.0.0"
   }
 }
