--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.28.1",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "playwright": "^1.28.1"
   },
   "dependencies": {
     "uuid": "^9.0.0"
