--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,4 +24,7 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
+        name: Recordings
+        path: videos/
         retention-days: 30
+
