add lint and prettier

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "help": "npx playwright test --help",
     "chromium": "npx playwright test --project=chromium",
     "egde": "npx playwright test --project=Microsoft Edge",
-    "webkit": "npx playwright test --project=webkit"
+    "webkit": "npx playwright test --project=webkit",
+    "lint": "eslint . --ext .ts",
+    "lint-and-fix": "eslint . --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,10 @@
   "devDependencies": {
     "@playwright/test": "^1.28.1",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "eslint-plugin-no-loops": "^0.3.0",
     "playwright": "^1.28.1"
   },
   "dependencies": {
